--- a/index.html
+++ b/index.html
@@ -4,19 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>유소연 포트폴리오</title>
-  <style>
-    html, body {
-      margin: 0;
-      height: 100%;
-    }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-  </style>
+  <meta http-equiv="refresh" content="0; url=portfolio.pdf">
 </head>
 <body>
-  <iframe src="./portfolio.pdf"></iframe>
 </body>
 </html>
+
